--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    --custom-font: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    display: grid;
+    grid-template-areas: "sidebar header" "sidebar main";
+    grid-template-columns: 1fr 2.3fr;
+    grid-template-rows: 120px 1fr;
+    min-height: 100vh;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .App__nav {
+    background-color: #0b1b32;
+    color: #fff;
+    grid-area: sidebar;
+    height: 100vh;
+    overflow: auto;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .App__header {
+    background-color: #0b1f3a;
+    color: #bdbdbd;
+    font-family: var(--custom-font);
+    grid-area: header;
+    padding-left: 16px;
+    padding-top: 32px;
+    text-shadow: 2px 1px 2px black;
   }
-}
+  
+  .App__header a {
+    color: #bdbdbd;
+  }
+  
+  .App__main {
+    background-color: #102541;
+    grid-area: main;
+    height: calc(100vh - 120px);
+    overflow: auto;
+  }
